deployments/k8s/ingress/istio/web/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-virtualservice
  namespace: realtime-app
spec:
  hosts:
  - web.realtime-app.svc.cluster.local
  - web.realtime
  gateways:
  - realtime-app/web-gateway
  http:
  - route:
    - destination:
        host: web.realtime-app.svc.cluster.local
        port:
          number: 8080
    corsPolicy:
      allowOrigin:
        - "*"
      allowMethods:
        - POST
        - GET
        - OPTIONS
        - PUT
        - DELETE
      maxAge: 1728s
